# dolphin-scheduler-s1mple

./: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  testdb-compose.yaml
backend/: .dockerignore  .env  Dockerfile  TRACKING_API.md  check_db.py  docker.env  local.env  log_config.yaml  main.py  pom.xml  pyproject.toml  tutorial.py
backend/app/: main.py  models.py  services.py
backend/src/: main.py  parser.py
backend/src/api/: ds.py  file.py  workflow.py
backend/src/backend/: db.py  logger.py  main.py  parser.py  workflow.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/backend/api/: ds.py  workflow.py
backend/src/backend/core/: logger.py
backend/src/backend/db/: setup.py
backend/src/backend/routers/: ds.py  workflow.py
backend/src/backend/services/: __init__.py  ds_service.py  file_service.py  git_service.py  process_service.py
backend/src/core/: logger.py  path_utils.py
backend/src/db/: setup.py
backend/src/main/java/com/example/: ProjectController.java  UserController.java
backend/src/main/java/com/example/scheduler/: SchedulerApplication.java
backend/src/main/java/com/example/scheduler/config/: WebConfig.java
backend/src/main/java/com/example/scheduler/controller/: DsController.java  (+8 more)
backend/src/main/resources/: application.properties  logback.xml
backend/src/routers/: __init__.py
backend/src/services/: ds_service.py  file_service.py  git_service.py  process_service.py
backend/uploads/: parser.py
backend/workflow_repo/: acba9360-ff44-47c6-99c0-db614a7511de.yaml
(+170 files in other folders)
