[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-dolphinscheduler>=4.1.0",
    "fastapi>=0.111.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.29.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
