[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-dolphinscheduler",
    "libcst>=1.0.0",
    "ruamel.yaml>=0.17.21",
    "fastapi>=0.111.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.29.0",
    "httpx",
    "pyyaml",
    "mysql-connector-python>=9.3.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "cron-descriptor>=1.4.3",
    "json5>=0.12.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
